integration-tests/src/test/resources/infra/openshift/registry-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: registry
  namespace: apicurio-registry-e2e
  labels:
    app: apicurio-registry-application
spec:
  to:
    kind: Service
    name: apicurio-registry-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
